mock-service/k8s/mock-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mock-server-deployment
  labels:
    app: mock-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mock-server
  template:
    metadata:
      labels:
        app: mock-server
    spec:
      containers:
      - name: mock-server
        image: mojaloop/mock-server:v0.1
        ports:
        - containerPort: 8080
