mock-service/k8s/mock-server-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: mock-server
spec:
  selector:
    app: mock-server
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
